# PyPonding

./: .gitignore  LICENSE  PyPondingPFEM.py  README.md  output.csv  ponding.pvd  setup.cfg  setup.py
PyPonding/: FE.py  PondingLoadCell.py  PondingLoadCell_OPS.py  __init__.py
PyPonding/Marino/: Marino.py  __init__.py
PyPonding/structures/: __init__.py  basic_structure.py  bay.py  elastic_beam.py  idealized_bay.py  idealized_joist_bay.py  joist.py  osu_test.py  roof2x3.py  roof2x3_Xdir.py  roof2x3_Ydir.py  roof2x3a.py  roof2x3b.py  steel_beam.py  wide_flange.py
studies/CBDI/: beam_camber_and_flexible_supports.py  beam_mesh_refinement.py  beam_number_of_simple_steps.py  beam_numerical_integration_study.py  beam_numerical_integration_study_nonlinear.py  beam_yielding.py  structures.py  test_beam.py  test_roof.py
studies/SSRC2022/: 2022-01-13 - SSRC Ponding.doc  Analysis_For_Validation.py  PyPondingPFEM.py  comparison_to_Marino_1966.py  comparison_to_OSU_test.py  comparison_to_PFEM.py  (+14 more)
tests/: Colombi_2006_Example_1_Full.py  Colombi_2006_Example_1_Partial.py  CompareOpenSeesAnalyses.py  CompareToSingleElement.py  Compare_OpenSees_to_PyPonding.py  Example_Plots.py  Example_Plots_1.py  Example_Plots_2.py  InelasticPondingCurve.py  MonteCarlo.py  OneWayPondingAnalysis.py  ReadMonteCarlo.py  ReadMonteCarlo_Alternate_Methods.py  ReadMonteCarlo_Beta_Plot_Only.py  StrengthEvaluation.py  StrengthEvaluation_plots.py  StrengthEvaluation_single.py  determine_ds.py  doPondingAnalysis.py  parametric_set.py  test_PondingLoadCell3d.py  test_opensees.py  wide_flange.py
(+335 files in other folders)
