[metadata]
name = PyPonding
version = 1.0.0
; Following metadata is optional.
author = Mark Denavit
author_email = mdenavit@utk.edu
description = A Python library for modeling ponding on framed structures.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denavit/PyPonding
license = MIT

[options]
; Need to tell setuptools where to find the packages, since they're tucked
; inside the `src` directory.


; Specifying minimum Python version and dependencies is optional, but helpful.
python_requires = >=3.7
install_requires =
    ; Put any dependencies here

[options.packages.find]
where = src
